@@ -798,7 +798,6 @@
                         <argLine>@{argLine} -Xmx1024m
                             ${java.module.args}
                             --enable-preview
-                            -XX:+UseCompactObjectHeaders
                             -Dnet.bytebuddy.experimental=true
                         </argLine>
 
@@ -952,7 +951,6 @@
                         <argLine>@{argLine} -Xmx1024m
                             ${java.module.args}
                             --enable-preview
-                            -XX:+UseCompactObjectHeaders
                             -Dnet.bytebuddy.experimental=true
                         </argLine>
 
